IntSetBins: Add a new implementation that use TreeMap

--- a/src/IntSetBins/com/set/test/.gitignore
+++ b/src/IntSetBins/com/set/test/.gitignore
@@ -2,3 +2,7 @@
 /SimpleBinsPerformance.class
 /IntSetSimpleBinsTest.class
 /ArrayListBinsPerformance.class
+/IntSetTreeMapBinsTest.class
+/PerformanceArrayListBins.class
+/PerformanceSimpleBins.class
+/PerformanceTreeMapBins.class
